# issabel_client

./: .gitignore  LICENSE  README.md  check_publication.sh  pyproject.toml  requirements-dev.txt
docs/: documentation.md
examples/: example_usage.py
issabel_client/: __init__.py  client.py
tests/: test_client.py
