[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "issabel-client"
version = "0.1.0"
description = "A simple Python Client for the Issabel PBX API"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Tulio Amancio", email = "root@tsuriu.com" },
]
keywords = ["issabel", "pbx", "api", "client", "sdk", "asterisk", "telephony"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/tulioamancio/issabel-sdk"
Repository = "https://github.com/tulioamancio/issabel-sdk"
Issues = "https://github.com/tulioamancio/issabel-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["issabel_client*"]
