[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "issabel_client"
version = "0.1.0"
description = "A simple Python Client for the Issabel PBX API"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Tulio Amancio", email = "root@tsuriu.com" },
]
keywords = ["issabel", "pbx", "api", "client", "python-client", "asterisk", "telephony"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/tsuriu/issabel_client"
Repository = "https://github.com/tsuriu/issabel_client"
Issues = "https://github.com/tsuriu/issabel_client/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["issabel_client*"]
